Add update namespace handler
